# Galaxian

./: CMakeLists.txt  LICENSE  README.md  version.rc
src/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  main.cpp
src/actors/: Actor.cpp  Actor.h  AttackShip.cpp  AttackShip.h  Bullet.cpp  Bullet.h  CollisionFiltering.h  Drone.cpp  Drone.h  Emissary.cpp  Emissary.h  Escort.cpp  Escort.h  Flagship.cpp  Flagship.h  Galaxian.cpp  Galaxian.h  GalaxianFormation.cpp  GalaxianFormation.h  Galaxyip.cpp  Galaxyip.h  IPointsAwarder.h  Ship.cpp  Ship.h
src/common/: Config.h  Config.h.in
src/gui/: GameOverGui.cpp  GameOverGui.h  GameplayGui.cpp  GameplayGui.h  IView.h  LoadScreenGui.cpp  LoadScreenGui.h  MainMenuGui.cpp  MainMenuGui.h  PauseMenuGui.cpp  PauseMenuGui.h
src/gui/widgets/: ClosablePanel.cpp  ClosablePanel.h
src/scene/: GameOverScene.cpp  GameOverScene.h  GameplayScene.cpp  GameplayScene.h  LoadScreenScene.cpp  LoadScreenScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseMenuScene.cpp  PauseMenuScene.h  Scene.cpp  Scene.h  ScrollingBackgroundScene.cpp  ScrollingBackgroundScene.h
src/scoreboard/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h
src/util/: Utils.cpp  Utils.h
